HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncTypeDiagnosticsTable/Expected.uv
//! Expected diagnostic metadata for the AsyncTypeDiagnosticsTable rejected-source specimen.

expectedDiagnostic("E-CON-0201", "diagnostics.21.AsyncType")
